# cookiecutter-gbo-python

./: LICENSE  README.md  cookiecutter.json  requirements_dev.txt
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  LICENSE  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py
